tests/any_collapse_untyped_integer/error.txt
Validation error: ./tests/any_collapse_untyped_integer/any_collapse_untyped_integer.fae, line 2: No symbol `non_existent` in the current scope
  2|     return non_existent + 5
                ^^^^^^^^^^^^
